--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ truescad_tessellation = { path = "tessellation", version = "0.2.*" }
 truescad_types = { path = "types", version = "0.2.*" }
 truescad_primitive = { path = "primitive", version = "0.2.*" }
 truescad_luascad = { path = "luascad", version = "0.1.*" }
-stl_io = { path = "stl_io", version = "0.2.*" }
+stl_io = "0.3.0"
 kiss3d = "0.8"
 
 [dev-dependencies]
