--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,11 +15,11 @@ rayon = "0.7.*"
 serde = "1.0"
 serde_derive = "1.0"
 toml = "0.4"
-truescad_tessellation = { path = "tessellation", version = "0.2.*" }
+truescad_tessellation = { path = "tessellation", version = "0.2.1" }
 truescad_types = { path = "types", version = "0.2.*" }
-truescad_primitive = { path = "primitive", version = "0.2.*" }
-truescad_luascad = { path = "luascad", version = "0.1.*" }
-stl_io = "0.3.0"
+truescad_primitive = { path = "primitive", version = "0.3.*" }
+truescad_luascad = { path = "luascad", version = "0.2.*" }
+stl_io = "0.3.4"
 kiss3d = "0.8"
 
 [dev-dependencies]
