--- a/.travis.yml
+++ b/.travis.yml
@@ -13,8 +13,7 @@ matrix:
 
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get install -qq libgtk-3-dev libglfw2
-
+  - sudo apt-get install -qq libgtk-3-dev libglfw3 libgl1-mesa-dev
 notifications:
   email:
     on_success: change
