--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "truescad"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["Henning Meyer <tutmann@gmail.com>"]
 
 [dependencies]
@@ -9,18 +9,18 @@ glib = "0.1.0"#{ git = "https://github.com/gtk-rs/glib.git" }#"^0"
 gdk = "0.5.0"#{ git = "https://github.com/gtk-rs/gdk.git" }#"^0"
 gtk = "0.1.0"#{ git = "https://github.com/gtk-rs/gtk.git" }#"^0"
 cairo-rs = "0.1.0"#{ git = "https://github.com/gtk-rs/cairo.git" }#"^0"
-nalgebra = "0.11"
+nalgebra = "0.14"
 alga = "0.5"
 rayon = "0.7.*"
 serde = "1.0"
 serde_derive = "1.0"
 toml = "0.4"
-truescad_tessellation = { path = "tessellation", version = "0.2.2" }
-truescad_types = { path = "types", version = "0.2.*" }
-truescad_primitive = { path = "primitive", version = "0.4.*" }
+truescad_tessellation = { path = "tessellation", version = "0.2.3" }
+truescad_types = { path = "types", version = "0.2.1" }
+truescad_primitive = { path = "primitive", version = "0.4.1" }
 truescad_luascad = { path = "luascad", version = "0.2.*" }
 stl_io = "0.3.4"
-kiss3d = "0.8"
+kiss3d = "0.13"
 
 [dev-dependencies]
 bencher = "0.1.*"
