--- a/luascad/Cargo.toml
+++ b/luascad/Cargo.toml
@@ -10,5 +10,5 @@ path = "lib.rs"
 [dependencies]
 hlua = "0.3"
 
-truescad_types = { path = "../types", version = "0.2.*" }
-truescad_primitive = { path = "../primitive", version = "0.4.*" }
+truescad_types = { path = "../types", version = "0.2.1" }
+truescad_primitive = { path = "../primitive", version = "0.4.1" }
