--- a/tessellation/Cargo.toml
+++ b/tessellation/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "truescad_tessellation"
-version = "0.2.2"
+version = "0.2.3"
 authors = ["Henning Meyer <tutmann@gmail.com>"]
 
 [lib]
@@ -8,15 +8,15 @@ name = "truescad_tessellation"
 path = "lib.rs"
 
 [dependencies]
-nalgebra = "0.11"
+nalgebra = "0.14"
 rand = "0.3"
 time = "0.1"
 byteorder = "0.5"
 rayon = "0.7.*"
 lazy_static = "0.2.8"
 
-truescad_types = { path = "../types", version = "0.2.*" }
-truescad_primitive = { path = "../primitive", version = "0.4.*" }
+truescad_types = { path = "../types", version = "0.2.1" }
+truescad_primitive = { path = "../primitive", version = "0.4.1" }
 
 [dev-dependencies]
 approx = "0.1"
