--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,12 @@
 [package]
 name = "truescad"
-version = "0.3.1"
+version = "0.3.2"
 authors = ["Henning Meyer <tutmann@gmail.com>"]
 
 [dependencies]
-libc = "0.1"
-glib = "0.1.0"#{ git = "https://github.com/gtk-rs/glib.git" }#"^0"
-gdk = "0.5.0"#{ git = "https://github.com/gtk-rs/gdk.git" }#"^0"
-gtk = "0.1.0"#{ git = "https://github.com/gtk-rs/gtk.git" }#"^0"
-cairo-rs = "0.1.0"#{ git = "https://github.com/gtk-rs/cairo.git" }#"^0"
+gtk = "0.3.*"
+gdk = "0.7.*"
+cairo-rs = "0.3.*"
 nalgebra = "0.14"
 alga = "0.5"
 rayon = "0.7.*"
