--- a/bbox/Cargo.toml
+++ b/bbox/Cargo.toml
@@ -10,4 +10,4 @@ path = "lib.rs"
 [dependencies]
 nalgebra = "0.14"
 alga = "0.5"
-truescad_types = { path = "../types", version = "0.2.1" }
+num-traits = "0.2"
