--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,10 @@ rayon = "0.7.*"
 serde = "1.0"
 serde_derive = "1.0"
 toml = "0.4"
-truescad_tessellation = { path = "tessellation", version = "0.2.3" }
+truescad_tessellation = { path = "tessellation", version = "0.2" }
 truescad_types = { path = "types", version = "0.2.1" }
-truescad_primitive = { path = "primitive", version = "0.4.1" }
-truescad_luascad = { path = "luascad", version = "0.2.*" }
+truescad_primitive = { path = "primitive", version = "0.5" }
+truescad_luascad = { path = "luascad", version = "0.2" }
 stl_io = "0.3.4"
 kiss3d = "0.13"
 
