--- a/luascad/Cargo.toml
+++ b/luascad/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "truescad_luascad"
-version = "0.2.1"
+version = "0.2.2"
 authors = ["Henning Meyer <tutmann@gmail.com>"]
 
 [lib]
@@ -11,4 +11,5 @@ path = "lib.rs"
 hlua = "0.3"
 
 truescad_types = { path = "../types", version = "0.2.1" }
-truescad_primitive = { path = "../primitive", version = "0.4.1" }
+truescad_primitive = { path = "../primitive", version = "0.5" }
+truescad_bbox = { path = "../bbox", version = "0.5" }
