--- a/tessellation/Cargo.toml
+++ b/tessellation/Cargo.toml
@@ -12,11 +12,11 @@ nalgebra = "0.14"
 rand = "0.3"
 time = "0.1"
 byteorder = "0.5"
-rayon = "0.7.*"
+rayon = "0.7"
 lazy_static = "0.2.8"
-
 truescad_types = { path = "../types", version = "0.2.1" }
-truescad_primitive = { path = "../primitive", version = "0.4.1" }
+truescad_primitive = { path = "../primitive", version = "0.5" }
+truescad_bbox = { path = "../bbox", version = "0.5" }
 
 [dev-dependencies]
 approx = "0.1"
