--- a/primitive/Cargo.toml
+++ b/primitive/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "truescad_primitive"
-version = "0.5.1"
+version = "0.5.2"
 authors = ["Henning Meyer <tutmann@gmail.com>"]
 
 [lib]
@@ -12,8 +12,9 @@ nalgebra = "0.14"
 approx = "0.1.1"
 alga = "0.5"
 stl_io = "0.3.4"
+bbox = "0.7"
+
 truescad_types = { path = "../types", version = "0.2.1" }
-truescad_bbox = { path = "../bbox", version = "0.6" }
 
 [dev-dependencies]
 bencher = "0.1.*"
