--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,7 @@ rayon = "0.7.*"
 serde = "1.0"
 serde_derive = "1.0"
 toml = "0.4"
-truescad_tessellation = { path = "tessellation", version = "0.2" }
+truescad_tessellation = { path = "tessellation", version = ">= 0.3" }
 truescad_types = { path = "types", version = "0.2" }
 truescad_primitive = { path = "primitive", version = "0.5" }
 truescad_luascad = { path = "luascad", version = "0.2" }
