--- a/tessellation/Cargo.toml
+++ b/tessellation/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "truescad_tessellation"
-version = "0.2.5"
+version = "0.3.0"
 authors = ["Henning Meyer <tutmann@gmail.com>"]
 
 [lib]
@@ -8,13 +8,14 @@ name = "truescad_tessellation"
 path = "lib.rs"
 
 [dependencies]
+alga = "0.5"
 nalgebra = "0.14"
 rand = "0.3"
 time = "0.1"
-byteorder = "0.5"
 rayon = "0.7"
 lazy_static = "0.2.8"
 bbox = "0.7"
+num-traits = "0.2"
 truescad_types = { path = "../types", version = "0.2.1" }
 truescad_primitive = { path = "../primitive", version = "0.5" }
 
