--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "truescad"
-version = "0.3.4"
+version = "0.3.5"
 authors = ["Henning Meyer <tutmann@gmail.com>"]
 
 [dependencies]
@@ -16,7 +16,7 @@ serde_derive = "1.0"
 toml = "0.4"
 truescad_tessellation = { path = "tessellation", version = ">= 0.3" }
 truescad_types = { path = "types", version = "0.2" }
-truescad_primitive = { path = "primitive", version = "0.6" }
+implicit3d = "0.7"
 truescad_luascad = { path = "luascad", version = "0.2" }
 stl_io = "0.3"
 kiss3d = "0.13"
