--- a/luascad/Cargo.toml
+++ b/luascad/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "truescad_luascad"
-version = "0.2.6"
+version = "0.2.7"
 authors = ["Henning Meyer <tutmann@gmail.com>"]
 
 [lib]
@@ -10,6 +10,6 @@ path = "lib.rs"
 [dependencies]
 hlua = "0.3"
 bbox = "0.7"
+implicit3d = "0.7"
 
 truescad_types = { path = "../types", version = "0.2.1" }
-truescad_primitive = { path = "../primitive", version = "0.6.1" }
