--- a/tessellation/Cargo.toml
+++ b/tessellation/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "truescad_tessellation"
-version = "0.3.1"
+version = "0.3.2"
 authors = ["Henning Meyer <tutmann@gmail.com>"]
 
 [lib]
@@ -16,8 +16,8 @@ rayon = "0.7"
 lazy_static = "0.2.8"
 bbox = "0.7"
 num-traits = "0.2"
+implicit3d = "0.7"
 truescad_types = { path = "../types", version = "0.2.1" }
-truescad_primitive = { path = "../primitive", version = "0.6" }
 
 [dev-dependencies]
 approx = "0.1"
