--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,9 @@ rayon = "0.7.*"
 serde = "1.0"
 serde_derive = "1.0"
 toml = "0.4"
-truescad_tessellation = { path = "tessellation", version = ">= 0.3" }
+bbox = "0.7"
+num-traits = "0.2"
+truescad_tessellation = { path = "tessellation", version = ">= 0.4" }
 truescad_types = { path = "types", version = "0.2" }
 implicit3d = "0.7"
 truescad_luascad = { path = "luascad", version = "0.2" }
