fix tesselation bench

--- a/tessellation/Cargo.toml
+++ b/tessellation/Cargo.toml
@@ -19,8 +19,8 @@ num-traits = "0.2"
 
 [dev-dependencies]
 approx = "0.1"
-bencher = "0.1.*"
-
+bencher = "0.1"
+implicit3d = "0.8"
 
 [[bench]]
 name = "tessellation"
