--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,47 @@
-sudo: required
-services:
-  - docker
-language: native
-install:
-  - lsb_release -a
+#dist: trusty
+#sudo: required
+
+language: rust
+rust:
+  - stable
+  - beta
+  - nightly
+
+matrix:
+  allow_failures:
+    - rust: beta
+
+notifications:
+  email:
+    on_success: change
+    on_failure: always
+
+before_script: |
+  PKGNAME="tesselation" # must match with cargo.toml
+  LOCAL="~/.local" # install here to avoid `sudo`
+  export PATH=$LOCAL/bin:$PATH
+
 script:
-  - docker run --rm -it -v "$(pwd)":/usr/src/myapp -w /usr/src/myapp rust:stretch ./ci.sh
+  - cargo build
+  - cargo test
+  - cargo bench
+
+
+# addons:
+#   apt:
+#     packages:
+#     - libcurl4-openssl-dev
+#     - libelf-dev
+#     - libdw-dev
+#     - libbfd-dev # required for `--verify`
+#     - libiberty-dev
+#
+# after_success: |
+#   wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
+#   tar xzf master.tar.gz && mkdir kcov-master/build && cd kcov-master/build &&
+#   cmake -DCMAKE_INSTALL_PREFIX:PATH=$LOCAL .. && make &&
+#   make install && cd ../.. &&
+#   kcov --verify \
+#        --coveralls-id=$TRAVIS_JOB_ID \
+#        --exclude-pattern=/.cargo \
+#        target/kcov target/debug/$PKGNAME-*
