--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,37 +1,34 @@
 [package]
-name = "truescad"
-version = "0.3.6"
+name = "tessellation"
+version = "0.5.0"
 authors = ["Henning Meyer <tutmann@gmail.com>"]
 
+description = "3d tessellation library."
+repository = "https://github.com/hmeyer/tessellation"
+readme = "README.md"
+keywords = ["tessellation", "3d", "manifold", "dual-contouring"]
+license = "GPL-3.0"
+
+[lib]
+name = "tessellation"
+path = "src/lib.rs"
+
 [dependencies]
-gtk = "0.3.*"
-sourceview = "0.3.*"
-gdk = "0.7.*"
-cairo-rs = "0.3.*"
-nalgebra = "0.14"
 alga = "0.5"
+nalgebra = "0.14"
+rand = "0.3"
+time = "0.1"
 rayon = "1.0"
-serde = "1.0"
-serde_derive = "1.0"
-toml = "0.4"
+lazy_static = "0.2.8"
+bbox = "0.8"
 num-traits = "0.2"
-truescad_tessellation = { path = "tessellation", version = ">= 0.4" }
-truescad_types = { path = "types", version = "0.2" }
-implicit3d = "0.9"
-truescad_luascad = { path = "luascad", version = "0.2" }
-stl_io = "0.3"
-kiss3d = "0.13"
 
 [dev-dependencies]
-bencher = "0.1.*"
-
-[features]
-gtk_3_10 = []
-gtk_3_14 = ["gtk_3_10"]
-
-# [profile.release]
-# lto = true
+approx = "0.1"
+bencher = "0.1"
+implicit3d = "0.8"
 
 [[bench]]
-name = "render"
+name = "tessellation"
+path = "src/benches/tessellation.rs"
 harness = false
