--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "tessellation"
-version = "0.6.1"
+version = "0.6.2"
 authors = ["Henning Meyer <tutmann@gmail.com>"]
 
 description = "3d tessellation library."
@@ -32,3 +32,7 @@ implicit3d = "0.9"
 name = "tessellation"
 path = "src/benches/tessellation.rs"
 harness = false
+
+[badges]
+travis-ci = { repository = "hmeyer/tessellation", branch = "master" }
+codecov = { repository = "hmeyer/tessellation", branch = "master", service = "github" }
