--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "tessellation"
 version = "0.8.0"
 authors = ["Henning Meyer <tutmann@gmail.com>"]
+edition = "2018"
 
 description = "3d tessellation library."
 repository = "https://github.com/hmeyer/tessellation"
