--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ alga = "0.9"
 nalgebra = "0.22"
 rand = "0.7"
 rayon = "1.2"
-lazy_static = "1.4"
+once_cell = "1.4"
 bbox = "0.11"
 num-traits = "0.2"
 
